--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
 		</div>
 		<div class="hero-content">
 			<div class="left-content">
-				Where web design meets the open road! <span class="highlight-red"> Explore my world as a creative web
+				Where web design meets the open road! Explore my world as a creative web
 					designer, adrenaline-pumping
-					moto biker, and content creator on YouTube & Instagram</span>. Get inspired by my designs, rides,
+					moto biker, and content creator on YouTube & Instagram. Get inspired by my designs, rides,
 				and
-				lifestyle—everything that fuels my passion. Let's create something epic together!
-				<p><span class="bold-text">...SCROLL TO READ &#10597</span></p>
+				lifestyle—everything that fuels my passion.<span class="highlight-red"> Let's create something epic together!</span>
+				<br><br><br><p><span class="bold-text">...SCROLL TO READ &#10597</span></p>
 			</div>
 			<div class="right-content">
 				<p>
@@ -73,8 +73,7 @@
 	</section>
 	<section class="page two">
 		<div class="left">
-			<div class="fat">Supercharge Your Workflow: <span class="highlight-red"> Tools, Designs, and Tutorials
-				</span>at Your Fingertips</div>
+			<div class="fat">Tools, Designs, and Tutorials at Your <span class="highlight-red"> Fingertips</span></div>
 			<div class="thin">Unlock a treasure trove of tools, designs, and tutorials right here on our website to
 				turbocharge your tasks—no more endless Googling!</div>
 		</div>
@@ -107,8 +106,8 @@
 				As a web designer, moto biker, YouTuber, and Instagram influencer, I blend creativity, adventure, and
 				technical expertise into one exciting mix! Whether you're after stunning web design, heart-racing biking
 				content, or lifestyle inspo, I’ve got it all. Let’s team up and create something amazing
-				together—collaborations are always welcome! <span class="highlight-red"> Connect with me on my social handles right here on this
-				page, and let’s make magic happen!</span> 🌟
+				together—collaborations are always welcome! Connect with me on my social handles right here on this
+				page, and <span class="highlight-red"> let’s make magic happen!</span> 🌟
 			</div>
 		</div>
 	</section>
