baseline check-in for speed test, still lot of work pending

--- a/navbar.html
+++ b/navbar.html
@@ -2,7 +2,7 @@
     <ul class="nav-menu">
         <li class="shuffle-text"><a href="index.html">Homepage</a></li>
         <li class="shuffle-text"><a href="index.html">Social</a></li>
-        <li class="shuffle-text"><a href="index.html">Applications</a></li>
+        <li class="shuffle-text"><a href="index.html">My Projects</a></li>
         <li class="shuffle-text"><a href="index.html">Blogs</a></li>
     </ul>
 </nav>
