--- a/sidebar.html
+++ b/sidebar.html
@@ -2,7 +2,7 @@
     <div class="menu-items">
         <a href="index.html" class="menu-link">Home</a>
         <a href="index.html" class="menu-link">Social</a>
-        <a href="index.html" class="menu-link">Applications</a>
+        <a href="index.html" class="menu-link">My Projects</a>
         <a href="index.html" class="menu-link">Blogs</a>
     </div>
 </div>
