--- a/speed-test.html
+++ b/speed-test.html
@@ -24,10 +24,11 @@
       <div class="form-group">
         <label for="file-size">Select File Size for Test:</label>
         <select id="file-size">
-          <option value="20MB">20 MB</option>
+          <option value="30MB">30 MB</option>
           <option value="50MB">50 MB</option>
-          <option value="200MB">200 MB</option>
-          <option value="512MB">512 MB</option>
+          <option value="250MB">250 MB</option>
+          <option value="500MB">500 MB</option>
+          <option value="10GB">10 GB</option>
         </select>
       </div>
       <button id="start-test">Start Test</button>
