--- a/speed-test.html
+++ b/speed-test.html
@@ -24,10 +24,8 @@
       <div class="form-group">
         <label for="file-size">Select File Size for Test:</label>
         <select id="file-size">
-          <option value="30MB">30 MB</option>
-          <option value="50MB">50 MB</option>
-          <option value="250MB">250 MB</option>
-          <option value="500MB">500 MB</option>
+          <option value="100MB">100 MB</option>
+          <option value="1GB">1 GB</option>
           <option value="10GB">10 GB</option>
         </select>
       </div>
