draft 5 - speed test

--- a/speed-test.html
+++ b/speed-test.html
@@ -27,6 +27,7 @@
         <input type="number" id="iterations" min="1" max="10" value="1">
       </div>
       <button id="start-test">Start Test</button>
+      <div id="iteration-progress" class="iteration-progress hidden"></div>
     </div>
 
     <!-- Results Container -->
