fixed the copy to clipboard

--- a/speed-test.html
+++ b/speed-test.html
@@ -62,12 +62,7 @@
       </div>
 
       <!-- Sharing Buttons -->
-      <div class="share-buttons hidden" id="share-buttons">
-        <button id="copy-to-clipboard">Copy to Clipboard</button>
-        <button id="share-twitter">Share on X</button>
-        <button id="share-whatsapp">Share on WhatsApp</button>
-        <button id="share-reddit">Share on Reddit</button>
-      </div>
+      <button id="copy-to-clipboard">Copy Results to Clipboard</button>
     </div>
     </div>
 
