--- a/speed-test.html
+++ b/speed-test.html
@@ -71,7 +71,7 @@
       </div>
 
       <!-- Sharing Buttons -->
-      <button id="copy-to-clipboard">Copy to Clipboard</button>
+      <button id="copy-to-clipboard">Copy Results</button>
     </div>
     </div>
 
