fixed toggle switch unit converstion, Copy to Clipboard to work, results container centred, error box to show iteration progress

--- a/app/speedtest/home.html
+++ b/app/speedtest/home.html
@@ -57,10 +57,10 @@
       </div>
 
       <!-- Progress Bar -->
-      <div id="iteration-progress" class="iteration-progress hidden"></div>
+     <!-- <div id="iteration-progress" class="iteration-progress hidden"></div>
       <div class="progress-bar hidden" id="progress-bar">
         <div class="progress" id="progress"></div>
-      </div>
+      </div>-->
 
       <!-- Error Box -->
       <div class="error-box hidden" id="error-box"></div>
