alignments for mobile and desktop, this should now fix.

--- a/app/speedtest/home.html
+++ b/app/speedtest/home.html
@@ -20,7 +20,7 @@
 <body>
   <div class="header-text">
     <h1>Internet Speed Test</h1>
-    <p>Ditch the bloated, ad-ridden speed tests! My lightweight, ultra-fast browser-based tool gives you instant,
+    <p>Ditch the bloated, ad-ridden speed tests! This lightweight, ultra-fast browser-based tool gives you instant,
       accurate results without slowing you down. No clutter, no waiting—just pure speed testing, the way it should be!
       🔥</p>
   </div>
@@ -45,7 +45,7 @@
         <!-- Iterations Row -->
         <div class="iterations-row">
           <div class="form-group">
-            <label for="iterations">Iterations ( Max 10):</label>
+            <label for="iterations" class="label-iterations">Iterations ( Max 10):</label>
                 <input type="number" id="iterations" min="1" max="10" value="1">
           </div>
           <button id="start-test">START</button>
