--- a/app/speedtest/home.html
+++ b/app/speedtest/home.html
@@ -10,10 +10,13 @@
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script type="module" src="/js/onload.js" defer></script>
   <script type="module" src="/js/navbar.js" defer></script>
   <script type="module" src="/js/sidebar.js" defer></script>
   <script src="/app/speedtest/speed-test.js" defer></script>
+  <link rel="shortcut icon" href="/imgs/favicon.png" type="image/x-icon" />
+
   <title>Internet Speed Test</title>
 </head>
 
@@ -65,6 +68,20 @@
       <!-- Error Box -->
       <div class="error-box hidden" id="error-box"></div>
 
+      <div class="social-handle">
+        <a href="https://www.instagram.com/swiftwindwalker" target="_blank">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="https://www.facebook.com/motoravzzy" target="_blank">
+          <i class="fa-brands fa-facebook"></i>
+        </a>
+        <a href="https://www.instagram.com/motoravzzy" target="_blank">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="https://www.youtube.com/ravzzy" target="_blank">
+          <i class="fa-brands fa-youtube"></i>
+        </a>			
+      </div>
       <!-- Results Container -->
       <div class="result-container hidden" id="result-container">
         <h2>Test Results</h2>
@@ -84,5 +101,9 @@
     </div>
   </div>
 </body>
-
+<script>
+	window.onbeforeunload = function () {
+		window.scrollTo(0, 0);
+	};
+</script>
 </html>
