added work in progress page

--- a/html/navbar.html
+++ b/html/navbar.html
@@ -1,8 +1,8 @@
 <nav class="navbar">
     <ul class="nav-menu">
-        <li class="shuffle-text"><a href="index.html">Homepage</a></li>
-        <li class="shuffle-text"><a href="index.html">Social</a></li>
-        <li class="shuffle-text"><a href="index.html">My Projects</a></li>
-        <li class="shuffle-text"><a href="index.html">Blogs</a></li>
+        <li class="shuffle-text"><a href="/index.html">Homepage</a></li>
+        <li class="shuffle-text"><a href="/work-in-progress.html">Social</a></li>
+        <li class="shuffle-text"><a href="/app/speedtest/home.html">My Projects</a></li>
+        <li class="shuffle-text"><a href="/work-in-progress.html">Blogs</a></li>
     </ul>
 </nav>
