--- a/app/speedtest/home.html
+++ b/app/speedtest/home.html
@@ -110,6 +110,7 @@
       <img src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" alt="Donate with PayPal" />
     </a>
   </div>
+  <div class="footer"> &copy;2025 ravzzy</div>
 </body>
 <script>
   window.onbeforeunload = function () {
