--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
     <div class="menu-items">
         <a href="/index.html" class="menu-link">Home</a>
-        <a href="work-in-progress.html" class="menu-link">Social</a>
+        <a href="/work-in-progress.html" class="menu-link">Social</a>
         <a href="/app/speedtest/home.html" class="menu-link">My Projects</a>
         <a href="/work-in-progress.html" class="menu-link">Blogs</a>
     </div>
