fixing scrolling issue in work in progress page.

--- a/work-in-progress.html
+++ b/work-in-progress.html
@@ -20,12 +20,13 @@
       box-sizing: border-box;
     }
     body, html {
+      min-height: 100vh;
+      max-height: 100vh;
       overflow-x: hidden;
       overflow-y: hidden;
     }
 
     body {
-      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
