--- a/work-in-progress.html
+++ b/work-in-progress.html
@@ -127,7 +127,7 @@
 	<div id="sidebar-container" class="sidebar-container"></div> <!-- Sidebar will be inserted here via js -->
   <div class="container">
     <h1>Work in Progress</h1>
-    <p>We're working hard to bring you something amazing soon, so stay tuned! Meanwhile we will auto-redirect you to our homepage for you to check it out.</p>
+    <p>Great things take time, and trust us, this will be worth the wait! While we work our magic, we’ll zip you over to our homepage—stay excited!.</p>
         <div class="loader"></div>
        <!-- <div class="progress-bar">
           <div class="progress"></div>
