removing unit-toggle, logic was crap

--- a/app/speedtest/home.html
+++ b/app/speedtest/home.html
@@ -56,9 +56,9 @@
           <button id="start-test">START</button>
         </div>
         <!-- Unit Toggle -->
-        <div class="unit-toggle">
+        <!--<div class="unit-toggle">
           <button id="toggle-unit">Switch to MB/s</button>
-        </div>
+        </div>-->
       </div>
 
       <!-- Progress Bar -->
