added default warning message for error box.

--- a/app/speedtest/home.html
+++ b/app/speedtest/home.html
@@ -68,7 +68,7 @@
       </div>-->
 
       <!-- Error Box -->
-      <div class="error-box hidden" id="error-box"></div>
+      <div class="error-box hidden" id="error-box">Patience, have you must. Click on Start more than once, do not</div>
 
       <div class="social-handle">
         <a href="https://www.instagram.com/swiftwindwalker" target="_blank">
