added google tag

--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 	<link rel="stylesheet" href="./css/sidebar.css">
 	<link rel="stylesheet" href="./css/navbar.css">
 	<title>Ravzzy</title>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+		integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-VS2WHLJQNE"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-VS2WHLJQNE');
+	</script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"
 		integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug=="
 		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -18,7 +28,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/ScrollToPlugin.min.js"></script>
 	<script type="module" src="./js/onload.js" defer></script>
 	<script type="module" src="./js/navbar.js" defer></script>
-	  <script type="module" src="./js/sidebar.js" defer></script>
+	<script type="module" src="./js/sidebar.js" defer></script>
 	<script src="./js/app.js" defer></script>
 	<link rel="shortcut icon" href="./imgs/favicon.png" type="image/x-icon" />
 </head>
@@ -58,11 +68,13 @@
 		<div class="hero-content">
 			<div class="left-content">
 				Where web design meets the open road! Explore my world as a creative web
-					designer, adrenaline-pumping
-					moto biker, and content creator on YouTube & Instagram. Get inspired by my designs, rides,
+				designer, adrenaline-pumping
+				moto biker, and content creator on YouTube & Instagram. Get inspired by my designs, rides,
 				and
-				lifestyle—everything that fuels my passion.<span class="highlight-red"> Let's create something epic together!</span>
-				<br><br><br><p><span class="bold-text">...SCROLL TO READ &#10597</span></p>
+				lifestyle—everything that fuels my passion.<span class="highlight-red"> Let's create something epic
+					together!</span>
+				<br><br><br>
+				<p><span class="bold-text">...SCROLL TO READ &#10597</span></p>
 			</div>
 			<div class="right-content">
 				<p>
@@ -124,7 +136,7 @@
 		</a>
 		<a href="https://www.youtube.com/ravzzy" target="_blank">
 			<i class="fa-brands fa-youtube"></i>
-		</a>			
+		</a>
 	</div>
 	<!--<div class="avatars">
 			<section>
