--- a/speed-test.html
+++ b/speed-test.html
@@ -10,6 +10,14 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VS2WHLJQNE"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-VS2WHLJQNE');
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!-- Include Chart.js for graphs -->
   <script type="module" src="./js/onload.js" defer></script>
   <script type="module" src="./js/navbar.js" defer></script>
