--- a/app/speedtest/home.html
+++ b/app/speedtest/home.html
@@ -59,7 +59,7 @@
         <!-- Iterations Row -->
         <div class="iterations-row">
           <div class="form-group">
-            <label for="iterations" class="label-iterations">Iterations ( Max 10):</label>
+            <label for="iterations" id="iterations-label">Iterations ( Max 10):</label>
             <input type="number" id="iterations" min="1" max="10" value="1">
           </div>
           <button id="start-test">START</button>
