changed the loader method

--- a/index.html
+++ b/index.html
@@ -34,9 +34,17 @@
 </head>
 
 <body class="loading">
-	<div class="loader">
+	<!--<div class="loader">
 		<img src="./imgs/loading.png" class="loader-img" alt="Loading" loading="eager" />
+	</div> -->
+	<div class="loader-overlay">
+		<div class="loader-content">
+			<div class="loader-text">Good things, time they take. Patience, one must have.</div>
+			<div class="loader-percentage">0%</div>
+			<!--<img src="./imgs/loading.png" class="loader-img" alt="Loading" loading="eager" /> -->
+		</div>
 	</div>
+
 	<div id="navbar-container" class="navbar-container"></div> <!-- Navbar will be inserted here via js-->
 	<button class="menu-btn">☰</button>
 	<div id="sidebar-container" class="sidebar-container"></div> <!-- Sidebar will be inserted here via js -->
