--- a/app/remove-background/home.html
+++ b/app/remove-background/home.html
@@ -383,6 +383,7 @@
 
 
         .footer {
+            text-transform: uppercase;
             margin-top: 1vh;
             height: 5vh;
             font-weight: 400;
