--- a/html/navbar.html
+++ b/html/navbar.html
@@ -2,7 +2,7 @@
     <ul class="nav-menu">
         <li class="shuffle-text"><a href="/index.html">Homepage</a></li>
         <li class="shuffle-text"><a href="/work-in-progress.html">Social</a></li>
-        <li class="shuffle-text"><a href="/app/speedtest/home.html">My Projects</a></li>
+        <li class="shuffle-text"><a href="/my-projects.html">My Projects</a></li>
         <li class="shuffle-text"><a href="/work-in-progress.html">Blogs</a></li>
     </ul>
 </nav>
