changed the footer message for GhostCut AI

--- a/app/remove-background/home.html
+++ b/app/remove-background/home.html
@@ -641,7 +641,7 @@
         </div>
 
         <footer-msg>
-            <p>AI Background Remover uses TensorFlow for in-browser processing. No images are uploaded to any server.
+            <p>GhostCut AI uses TensorFlow for in-browser processing. No images are uploaded to any server.
             </p>
         </footer-msg>
     </div>
