changed to black theme for my-projects

--- a/my-projects.html
+++ b/my-projects.html
@@ -28,8 +28,10 @@
     <title>My Projects</title>
     <style>
         :root {
-            --primary-color: #6e48aa;
-            --primary-light: #9d50bb;
+            /*--primary-color: #6e48aa;
+            --primary-light: #9d50bb;*/
+            --primary-color: black;
+            --primary-light: grey;
             --secondary-color: #4776e6;
             --accent-color: #4ecdc4;
             --background: #f8f9ff;
