adding visit-counter to ghostcut ai

--- a/app/remove-background/home.html
+++ b/app/remove-background/home.html
@@ -65,7 +65,7 @@
 
         .container {
             max-width: 95vw;
-            margin-top:3vh !important;
+            margin-top:5vh !important;
             margin: 0 auto;
             background: white;
             border-radius: 12px;
@@ -546,6 +546,9 @@
     <div id="navbar-container" class="navbar-container"></div> <!-- Navbar will be inserted here via js-->
     <button class="menu-btn">☰</button>
     <div id="sidebar-container" class="sidebar-container"></div> <!-- Sidebar will be inserted here via js -->
+    <div id="sfc8rpeg5mb3jr3sgs9jkuwbgwza3m6rx8l"></div>
+    <script type="text/javascript" src="https://counter4.optistats.ovh/private/counter.js?c=8rpeg5mb3jr3sgs9jkuwbgwza3m6rx8l&down=async" async></script>
+    <noscript><a href="https://www.freecounterstat.com" title="hit counter"><img src="https://counter4.optistats.ovh/private/freecounterstat.php?c=8rpeg5mb3jr3sgs9jkuwbgwza3m6rx8l" border="0" title="hit counter" alt="hit counter"></a></noscript>
     <div class="container">
         <header>
             <h1>GhostCut AI</h1>
