formatting the status for ghostcut ai

--- a/app/remove-background/home.html
+++ b/app/remove-background/home.html
@@ -346,12 +346,17 @@
         }
 
         .status-title {
+            position: relative;
+            left: 1vw;
+            font-size: 0.875rem;
             font-weight: 600;
-            margin-bottom: 0.7rem;
+            margin-bottom: 0.5rem;
             color: var(--success);
         }
 
         .status-message {
+            position: relative;
+            left: 1vw;
             font-size: 0.875rem;
         }
 
