--- a/app/remove-background/home.html
+++ b/app/remove-background/home.html
@@ -678,7 +678,7 @@
         <h3>Support My Work</h3>
         <p>If you find this tool useful, consider donating to support its development and maintenance. Thank you! ❤️</p>
         <a href="https://www.paypal.me/erravz" target="_blank">
-            <img src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" alt="Donate with PayPal" />
+            <img src="/imgs/paypal_button.png" alt="Donate with PayPal" />
         </a>
     </div>
     <div class="footer"> &copy;2025 ravzzy</div>
