--- a/html/navbar.html
+++ b/html/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
     <ul class="nav-menu">
         <li class="shuffle-text"><a href="/index.html">Homepage</a></li>
-        <li class="shuffle-text"><a href="/work-in-progress.html">Social</a></li>
+        <li class="shuffle-text"><a href="/social.html">Social</a></li>
         <li class="shuffle-text"><a href="/my-projects.html">My Projects</a></li>
         <li class="shuffle-text"><a href="/work-in-progress.html">Blogs</a></li>
     </ul>
