--- a/social.html
+++ b/social.html
@@ -45,11 +45,13 @@
             background-color: var(--black);
             color: var(--white);
             min-height: 100vh;
+            max-width: 100vw;
         }
 
         .nav-menu a {
             text-transform: uppercase;
         }
+
         header {
             padding-top: 3rem;
             padding-bottom: 1.5rem;
@@ -59,7 +61,7 @@
         }
 
         h1 {
-            top:2rem;
+            top: 2rem;
             font-size: 2rem;
             margin-bottom: 0.5rem;
             font-weight: 600;
@@ -222,45 +224,45 @@
 
 
         .social-handle {
-	position: fixed;
-	/* Fix it to the screen */
-	bottom: 20px;
-	/* Distance from the bottom of the page */
-	right: 20px;
-	/* Distance from the right of the page */
-	display: block;
-	/* Hide initially */
-	justify-content: space-around;
-	align-items: center;
-	gap: 4px;
-	z-index: 10;
-	/* Ensure it's on top of other content */
-}
+            position: fixed;
+            /* Fix it to the screen */
+            bottom: 20px;
+            /* Distance from the bottom of the page */
+            right: 20px;
+            /* Distance from the right of the page */
+            display: block;
+            /* Hide initially */
+            justify-content: space-around;
+            align-items: center;
+            gap: 4px;
+            z-index: 10;
+            /* Ensure it's on top of other content */
+        }
 
-.social-handle a {
-	display: inline-block;
-}
+        .social-handle a {
+            display: inline-block;
+        }
 
-.social-handle i {
-	font-size: 15px;
-	color: #333;
-	/* Default color for icons */
-	border: 0.5px solid #000;
-	border-radius: 50%;
-	padding: 4px;
-	transition: all 0.3s ease;
-}
+        .social-handle i {
+            font-size: 15px;
+            color: #333;
+            /* Default color for icons */
+            border: 0.5px solid #000;
+            border-radius: 50%;
+            padding: 4px;
+            transition: all 0.3s ease;
+        }
 
-.social-handle i:hover {
-	color: #ff2759;
-	/* Hover color */
-	border-color: #ff2759;
-	/* Hover border color */
-	transform: scale(1.4);
-	/* Increase the size by 20% */
-	z-index: 20;
-	/* Ensure the hovered icon is on top */
-}
+        .social-handle i:hover {
+            color: #ff2759;
+            /* Hover color */
+            border-color: #ff2759;
+            /* Hover border color */
+            transform: scale(1.4);
+            /* Increase the size by 20% */
+            z-index: 20;
+            /* Ensure the hovered icon is on top */
+        }
 
 
 
@@ -291,18 +293,39 @@
         }
 
         @media (max-width: 768px) {
+
+            header h1 {
+                font-size: 1.5rem;
+            }
+
+            .subtitle {
+                font-size: 0.7rem;
+            }
+
+            .filter-btn {
+                transform: scale(0.8);
+            }
+
             .socials-container {
                 grid-template-columns: 1fr;
                 padding: 1.5rem;
+                max-width: 80vw;
             }
 
-            h1 {
-                font-size: 2.2rem;
+            .filter-buttons {
+                gap: 0rem;
+            }
+
+            .social-card {
+                width: 70vw;
+                align-items: center;
+
             }
 
             header {
                 padding: 2rem 1.5rem;
             }
+
         }
     </style>
 </head>
@@ -399,8 +422,8 @@
             </div>
         </div>
 
-         <!-- Instagram Reel Example -->
-         <div class="social-card" data-platform="instagram">
+        <!-- Instagram Reel Example -->
+        <div class="social-card" data-platform="instagram">
             <div class="embed-container instagram-reel">
                 <iframe src="https://www.instagram.com/p/CvMAMqCI-iS/embed" frameborder="0" scrolling="no"
                     allowtransparency="true"></iframe>
@@ -424,8 +447,8 @@
             </div>
         </div>
 
-         <!-- Instagram Reel Example -->
-         <div class="social-card" data-platform="instagram">
+        <!-- Instagram Reel Example -->
+        <div class="social-card" data-platform="instagram">
             <div class="embed-container instagram-reel">
                 <iframe src="https://www.instagram.com/p/C_p6r1Po3KS/embed" frameborder="0" scrolling="no"
                     allowtransparency="true"></iframe>
